chore(ci): add zeebe docker image for integration testing